--- a/CGV_PJ/intro.html
+++ b/CGV_PJ/intro.html
@@ -42,9 +42,9 @@
     
     <!--2. 들어가기 버튼-->
     <div id="enter">
-        <a href="intro.html" target="_self">
+        <a href="CGVPJ.html" target="_self">
             <img src="images/logo_cgv.png" alt="CGV 예고편 상영관 들어가기">
-            <span>Click Here!</span>
+            <span>여기눌러!</span>
         </a>
         
     </div>
