--- a/CGV_PJ/intro.html
+++ b/CGV_PJ/intro.html
@@ -44,7 +44,7 @@
     <div id="enter">
         <a href="CGVPJ.html" target="_self">
             <img src="images/logo_cgv.png" alt="CGV 예고편 상영관 들어가기">
-            <span>여기눌러!</span>
+            <span>요기눌러!</span>
         </a>
         
     </div>
